--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 
 
-    <!-- <script src="q1.js"></script> -->
-    <!-- <script src =q2.js></script> -->
-    <!-- <script src="q3.js"></script> -->
+    <script src="q1.js"></script>
+    <script src =q2.js></script>
+    <script src="q3.js"></script>
     <script src ="q4.js"></script>
     
 </body>
