--- a/q1_to_q4/index.html
+++ b/q1_to_q4/index.html
@@ -1,5 +1,9 @@
 <html>
 
+<head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
 <body>
 
     <button id="q1" onclick="simpleInterest()">Q1.Simple Interest</button>
