--- a/newerTimes/index.html
+++ b/newerTimes/index.html
@@ -129,7 +129,7 @@
 
                         <h3>TO THE NEW joins Acquia Community Partner Program
                         </h3>
-                        <b>By Ankit Gupta </b>
+                        <strong>By Ankit Gupta </strong>
                         <p>As Acquia's Community Partner, TO THE NEW will leverage ital experiences for it's clients
                             across
                             ....
