--- a/schoolZone/index.html
+++ b/schoolZone/index.html
@@ -21,14 +21,14 @@
         <div class="head-top clearfix">
             <div class="head-top-content wrapper">
                 <ul class="secondary-nav">
-                    <li><a href="">FUTURE STUDENTS</a> </li>
-                    <li><a href="">OUR COMMUNITY </a> </li>
-                    <li><a href="">COURSES </a> </li>
-                    <li><a href="">EVENTS </a> </li>
-                    <li><a href="">TEAM </a> </li>
-                    <li><a href="">BLOG </a> </li>
-                    <li><a href="">STYLE GUIDE </a> </li>
-                    <LI><a href="">TESTIMONIALS </a> </LI>
+                    <li><a href="#">FUTURE STUDENTS</a> </li>
+                    <li><a href="#">OUR COMMUNITY </a> </li>
+                    <li><a href="#">COURSES </a> </li>
+                    <li><a href="#">EVENTS </a> </li>
+                    <li><a href="#">TEAM </a> </li>
+                    <li><a href="#">BLOG </a> </li>
+                    <li><a href="#">STYLE GUIDE </a> </li>
+                    <LI><a href="#">TESTIMONIALS </a> </LI>
                 </ul>
 
                 <div class="share-nav">
@@ -77,16 +77,16 @@
 
             <ul class="primary-nav wrapper">
                 <li><a href="#">HOME</a></li>
-                <li><a href="">THEME INFO </a> </li>
-                <li><a href="">COURSES </a> </li>
-                <li><a href="">EVENTS </a> </li>
-                <li><a href="">TEAM </a> </li>
-                <li><a href="">BLOG </a> </li>
-                <li><a href="">STYLE GUIDE </a> </li>
-                <LI><a href="">SHOP </a> </LI>
-                <LI><a href="">PAGE EXAMPLES </a> </LI>
-                <LI><a href="">FUTURE </a> </LI>
-                <li><a href="" class="search"></a></li>
+                <li><a href="#">THEME INFO </a> </li>
+                <li><a href="#">COURSES </a> </li>
+                <li><a href="#">EVENTS </a> </li>
+                <li><a href="#">TEAM </a> </li>
+                <li><a href="#">BLOG </a> </li>
+                <li><a href="#">STYLE GUIDE </a> </li>
+                <LI><a href="#">SHOP </a> </LI>
+                <LI><a href="#">PAGE EXAMPLES </a> </LI>
+                <LI><a href="#">FUTURE </a> </LI>
+                <li><a href="#" class="search"></a></li>
             </ul>
 
         </div>
@@ -125,9 +125,9 @@
 
     </section>
 
-    <section class="information clearfix">
+    <section class="information">
 
-        <ul class="cards wrapper ">
+        <ul class="cards wrapper">
 
             <li>
                 <div class="card-1">
