--- a/newerTimes/index.html
+++ b/newerTimes/index.html
@@ -121,7 +121,7 @@
 
             </div>
 
-            <div class=blogContent>
+            <div class="blogContent clearfix ">
 
                 <div class="leftBlogContent">
 
