--- a/forms_tables/q1/index.html
+++ b/forms_tables/q1/index.html
@@ -3,82 +3,68 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title></title>
+    <meta name="author" content="">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
+
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
-    <!DOCTYPE html>
-    <html>
 
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-        <meta name="author" content="">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <table cellpadding="10px">
+        <thead>
+            <tr>
+                <th>Group</th>
+                <th>Runner</th>
+                <th>Time</th>
+                <th>Origin</th>
+            </tr>
+        </thead>
 
-        <link href="css/reset.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+        <tbody>
+            <tr>
+                <td>Men</td>
+                <td>1. Peter Teagan</td>
+                <td>2:12:34</td>
+                <td>San Antonio, Texas</td>
+            </tr>
+            <tr>
+                <td>Men</td>
+                <td>2. Kyle Wills</td>
+                <td>2:13:05</td>
+                <td>Billings, Montana</td>
+            </tr>
+            <tr>
+                <td>Men</td>
+                <td>3. Jason Wu</td>
+                <td>2:14:28</td>
+                <td>Cutler, Colorado</td>
+            </tr>
+            <tr>
+                <td>Women</td>
+                <td>1. Laura Blake</td>
+                <td>2:28:21</td>
+                <td>Park City, Colorado</td>
+            </tr>
+            <tr>
+                <td>Women</td>
+                <td>2. Kathy Lasker</td>
+                <td>2:30:11</td>
+                <td>Chicago, Illinois</td>
+            </tr>
+            <tr>
+                <td>Women</td>
+                <td>3. Lisa Peterson</td>
+                <td>2:31:14</td>
+                <td>Seattle, Washington</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
 
-    <body>
-
-        <table cellpadding="10px">
-            <thead>
-                <tr>
-                    <th>Group</th>
-                    <th>Runner</th>
-                    <th>Time</th>
-                    <th>Origin</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Men</td>
-                    <td>1. Peter Teagan</td>
-                    <td>2:12:34</td>
-                    <td>San Antonio, Texas</td>
-                </tr>
-                <tr>
-                    <td>Men</td>
-                    <td>2. Kyle Wills</td>
-                    <td>2:13:05</td>
-                    <td>Billings, Montana</td>
-                </tr>
-                <tr>
-                    <td>Men</td>
-                    <td>3. Jason Wu</td>
-                    <td>2:14:28</td>
-                    <td>Cutler, Colorado</td>
-                </tr>
-                <tr>
-                    <td>Women</td>
-                    <td>1. Laura Blake</td>
-                    <td>2:28:21</td>
-                    <td>Park City, Colorado</td>
-                </tr>
-                <tr>
-                    <td>Women</td>
-                    <td>2. Kathy Lasker</td>
-                    <td>2:30:11</td>
-                    <td>Chicago, Illinois</td>
-                </tr>
-                <tr>
-                    <td>Women</td>
-                    <td>3. Lisa Peterson</td>
-                    <td>2:31:14</td>
-                    <td>Seattle, Washington</td>
-                </tr>
-            </tbody>
-        </table>
-    </body>
-
-    </html>
+</html>
 
 </body>
 
