assignment on forms/table

--- a/forms_tables/q2/index.html
+++ b/forms_tables/q2/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="author" content="">
-    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="main.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <script src="main.js"></script>
 </head>
 
 <body>
 
-    <table cellpadding="10px">
+    <table cellpadding="10px" border="5">
+        <caption>Results</caption>
+
         <thead>
             <tr>
                 <th>Group</th>
@@ -22,7 +23,6 @@
                 <th>Origin</th>
             </tr>
         </thead>
-
         <tbody>
             <tr>
                 <td>Men</td>
@@ -62,10 +62,6 @@
             </tr>
         </tbody>
     </table>
-</body>
-
-</html>
-
 </body>
 
 </html>
