--- a/toTheNew/index.html
+++ b/toTheNew/index.html
@@ -159,9 +159,19 @@
 
     </section>
     <footer>
-
-
-
+        <h3>
+            We've gone places!
+        </h3>
+        <div class="map">
+            <img class="map" src="sources/map.png" alt="map">
+            <span class="dots us"></span>
+            <span class="dots india"></span>
+            <span class="dots aus"></span>
+            <span class="dots africa"></span>
+            <span class="dots sa"></span>
+            <span class="dots eu"></span>
+            <span class="dots rus"></span>
+        </div>
 
 
     </footer>
