--- a/toTheNew/index.html
+++ b/toTheNew/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <header class="clearfix">
+    <header>
         <div class="branding">
             <img class="logo" src="sources/logoToTheNew.png">
             <i class="bonjour">Bonjour!</i>
@@ -93,7 +93,7 @@
     </section>
 
 
-    <section class="stats clearfix">
+    <section class="stats">
         <ul>
             <li>
                 <h3>
@@ -158,23 +158,137 @@
 
 
     </section>
+
+
     <footer>
-        <h3>
-            We've gone places!
-        </h3>
-        <div class="map">
-            <img class="map" src="sources/map.png" alt="map">
-            <span class="dots us"></span>
-            <span class="dots india"></span>
-            <span class="dots aus"></span>
-            <span class="dots africa"></span>
-            <span class="dots sa"></span>
-            <span class="dots eu"></span>
-            <span class="dots rus"></span>
+
+        <div class="footer-top">
+
+            <h3>
+                We've gone places!
+            </h3>
+
+            <ul class="map-desc ">
+                <li>
+                    <h3>600+</h3>
+                    <p>PEOPLE</p>
+                </li>
+                <li>
+                    <h3>6</h3>
+                    <p>OFFICES</p>
+
+                </li>
+                <li>
+                    <h3>12</h3>
+                    <p>COUNTRIES</p>
+                </li>
+            </ul>
+
+            <div class="map">
+                <img class="map-img" src="sources/map.png" alt="map">
+                <span class="dots mexico"></span>
+                <span class="dots canada"></span>
+                <span class="dots india"></span>
+                <span class="dots aus"></span>
+                <span class="dots colombia"></span>
+                <span class="dots peru"></span>
+                <span class="dots brazil"></span>
+                <span class="dots uruguay"></span>
+                <span class="dots rus"></span>
+                <span class="dots kenya"></span>
+                <span class="dots italy"></span>
+                <span class="dots-p china"></span>
+                <span class="dots-p india-s"></span>
+                <span class="dots-p indonesia"></span>
+                <span class="dots-p arab"></span>
+
+            </div>
+
+            <ul class="map-key">
+                <li>
+                    <span class="dots"></span>
+                    <p>
+                        Client Locations
+                    </p>
+                </li>
+                <li>
+                    <span class="dots-p"></span>
+                    <p>
+                        Our Locations
+                    </p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer-m">
+
+            <div class="footer-m-contents">
+
+                <div class="share-nav">
+                    <h6>REMAIN IN TOUCH</h6>
+
+                    <div class="share-icons">
+                        <span class="icon-dot fb">
+                            <a href="https://facebook.com" class="fab fa-facebook-f"></a>
+                        </span>
+                        <span class="icon-dot">
+                            <a href="https://instagram.com" class="fab fa-instagram share-icons"></a>
+                        </span>
+                        <span class="icon-dot">
+
+                            <a href="https://twitter.com" class="fab fa-twitter share-icons"></a>
+                        </span>
+                        <span class="icon-dot">
+                            <a href="https://pinterest.co.uk" class="fab fa-pinterest-square share-icons"></a>
+                        </span>
+                        <span class="icon-dot">
+                            <a href="https://plus.google.com" class="fab fa-google-plus-g share-icons"></a>
+                        </span>
+                    </div>
+                </div>
+
+
+
+                <div class="newsletter">
+                    <h6>SUBSCRIBE TO OUR</h6>
+                    <input type="checkbox">
+                    <h6>NEWSLETTER</h6>
+                    <input type="checkbox">
+                    <H6>BLOG</H6>
+
+                    <input type="email" name="text" placeholder="   Enter your email here">
+
+                    <a href="#" class="signup-btn">Sign Up</a>
+                </div>
+
+            </div>
+
+            <hr class="before-bottom-content-hr">
+
+
+            <div class="bottom-content">
+                <img class="logo-black" src="sources/logoToTheNewblack.png">
+
+                <p> &copy ToTheNew 2015</p>
+
+            </div>
+
+
+
+
+
         </div>
 
 
+
+
+
+
+
     </footer>
+
+
+
 
 
 
