--- a/toTheNew/index.html
+++ b/toTheNew/index.html
@@ -250,15 +250,18 @@
 
 
                 <div class="newsletter">
-                    <h6>SUBSCRIBE TO OUR</h6>
-                    <input type="checkbox">
-                    <h6>NEWSLETTER</h6>
-                    <input type="checkbox">
-                    <H6>BLOG</H6>
+                    <form action="#">
+                        <h6>SUBSCRIBE TO OUR</h6>
 
-                    <input type="email" name="text" placeholder="   Enter your email here">
+                        <input type="checkbox">
+                        <h6>NEWSLETTER</h6>
+                        <input type="checkbox">
+                        <H6>BLOG</H6>
 
-                    <a href="#" class="signup-btn">Sign Up</a>
+                        <input type="email" name="text" placeholder="   Enter your email here">
+
+                        <a href="#" class="signup-btn">Sign Up</a>
+                    </form>
                 </div>
 
             </div>
