added class newsletter to form and remved parent div

--- a/toTheNew/index.html
+++ b/toTheNew/index.html
@@ -248,21 +248,19 @@
                 </div>
 
 
+                <form class="newsletter" action="#">
+                    <h6>SUBSCRIBE TO OUR</h6>
 
-                <div class="newsletter">
-                    <form action="#">
-                        <h6>SUBSCRIBE TO OUR</h6>
+                    <input type="checkbox">
+                    <h6>NEWSLETTER</h6>
+                    <input type="checkbox">
+                    <H6>BLOG</H6>
 
-                        <input type="checkbox">
-                        <h6>NEWSLETTER</h6>
-                        <input type="checkbox">
-                        <H6>BLOG</H6>
+                    <input type="email" name="text" placeholder="   Enter your email here">
 
-                        <input type="email" name="text" placeholder="   Enter your email here">
+                    <a href="#" class="signup-btn">Sign Up</a>
+                </form>
 
-                        <a href="#" class="signup-btn">Sign Up</a>
-                    </form>
-                </div>
 
             </div>
 
