--- a/agni/index.html
+++ b/agni/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html >
 
 <head>
     <meta charset="utf-8">
@@ -12,13 +11,63 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
+
+
     <header>
+
+        <div class="wrapper">
+            <div class="branding">
+                <img src="sources/Logo.png">
+            </div>
+            <div id="google_translate_element"></div>
+
+            <ul class="nav">
+                <li> <a href="#" class="fas fa-home"></a></li>
+                <li> <a href="#">About</a></li>
+                <li> <a href="#">Ecosystem</a></li>
+                <li> <a href="#">Resource</a></li>
+                <li> <a href="#">Contact us</a></li>
+                <li> <a href="#" class="icon-dot"><i class="fas fa-user user"></i></a>
+                    <a href="#" class="fas fa-chevron-circle-down user dropbtn dwn"></a>
+                    <div class="dropdown-content">
+                        <a href="#">HOME</a>
+                        <a href="#">ABOUT</a>
+                        <a href="#">BLOG</a>
+                        <a href="#">CONTACT</a>
+                    </div>
+                </li>
+            </ul>
+
+
+
+
+        </div>
 
     </header>
 
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: ''
+            }, 'google_translate_element');
+        }
+    </script>
+
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script>
+        $('.goog-te-combo').val("en");
+    </script>
+
 </body>
+
 
 </html>
