--- a/agni/index.html
+++ b/agni/index.html
@@ -34,14 +34,17 @@
                 <li> <a href="#">Ecosystem</a></li>
                 <li> <a href="#">Resource</a></li>
                 <li> <a href="#">Contact us</a></li>
-                <li> <a href="#" class="icon-dot"><i class="fas fa-user user"></i></a>
-                    <a href="#" class="fas fa-chevron-circle-down user dropbtn dwn"></a>
-                    <div class="dropdown-content">
-                        <a href="#">HOME</a>
-                        <a href="#">ABOUT</a>
-                        <a href="#">BLOG</a>
-                        <a href="#">CONTACT</a>
-                    </div>
+                <li>
+                    <button href="#" class="dropdown">
+                        <span class="icon-dot dropbtn"><i class="fas fa-user user"></i></span>
+                        <i href="#" class="fas fa-angle-down user dropbtn dwn"></i>
+                        <div class="dropdown-content">
+                            <a href="#">HOME</a>
+                            <a href="#">ABOUT</a>
+                            <a href="#">BLOG</a>
+                            <a href="#">CONTACT</a>
+                        </div>
+                    </button>
                 </li>
             </ul>
 
@@ -51,6 +54,72 @@
         </div>
 
     </header>
+
+    <section class="banner">
+
+        <div class="wrapper">
+
+            <ul class="active">
+                <li>Home</li>
+                <li>About</li>
+                <li>Partners</li>
+            </ul>
+
+
+
+            <div class="banner-text">
+
+                <h2 class="banner-title">Partners
+                </h2>
+                <p class="banner-desc">Interested in becoming a partner?
+                </p>
+                <div class="btns">
+
+                    <a href="#" class="get-involved-btn">Get Involved</a>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <h2 class="sub-heading">Featured Videos</h2>
+    <div class="videos">
+        <div class="active_video">
+            <img class="juhee" src="image-1.png">
+            <div class="rectangle">
+                <p class="artist">Juhee Ahmed</p>
+                <p class="designation">CEO, Fab Ci</p>
+            </div>
+            <i id="play" class="fas fa-play-circle fa-3x"></i>
+        </div>
+        <div class="playing_now">
+            <img class="next" src="images-2.png">
+            <img class="now" src="images-2.png">
+            <img class="previous" src="images-2.png">
+        </div>
+        <div class="detail">
+            <h4>Juhee Ahmed</h4>
+            <p class="desg">Assistant, IIT Madras</p>
+            <h4>Fareeha Choudhary</h4>
+            <p class="desg">Clerk, SBI Noida</p>
+            <h4>Nagma Ahmed</h4>
+            <p class="desg">Assistant, ICICI Delhi</p>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <script type="text/javascript">
@@ -64,7 +133,9 @@
 
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script>
-        $('.goog-te-combo').val("en");
+        function selectEnglish() {
+            $('.goog-te-combo').val("en");
+        }
     </script>
 
 </body>
