--- a/agni/index.html
+++ b/agni/index.html
@@ -34,22 +34,19 @@
                 <li> <a href="#">Ecosystem</a></li>
                 <li> <a href="#">Resource</a></li>
                 <li> <a href="#">Contact us</a></li>
-                <li>
-                    <button href="#" class="dropdown">
-                        <span class="icon-dot dropbtn"><i class="fas fa-user user"></i></span>
-                        <i href="#" class="fas fa-angle-down user dropbtn dwn"></i>
-                        <div class="dropdown-content">
-                            <a href="#">HOME</a>
-                            <a href="#">ABOUT</a>
-                            <a href="#">BLOG</a>
-                            <a href="#">CONTACT</a>
-                        </div>
-                    </button>
+                <li class="dropdown">
+                    <span class="icon-dot dropbtn">
+                        <i class="fas fa-user user"></i>
+                    </span>
+                    <i href="#" class="fas fa-angle-down user dropbtn dwn"></i>
+                    <div class="dropdown-content">
+                        <a href="#">HOME</a>
+                        <a href="#">ABOUT</a>
+                        <a href="#">BLOG</a>
+                        <a href="#">CONTACT</a>
+                    </div>
                 </li>
             </ul>
-
-
-
 
         </div>
 
@@ -83,31 +80,62 @@
     </section>
 
 
+    <section class="featured-videos">
 
-    <h2 class="sub-heading">Featured Videos</h2>
-    <div class="videos">
-        <div class="active_video">
-            <img class="juhee" src="image-1.png">
-            <div class="rectangle">
-                <p class="artist">Juhee Ahmed</p>
-                <p class="designation">CEO, Fab Ci</p>
+        <h2 class="featured-heading">Featured Videos</h2>
+
+        <div class="video-container">
+
+            <div class="active-video">
+
+                <img class="artist" src="sources/active.png">
+
+                <div class="name-plate">
+                    <p class="artist-name">Juhee Ahmed</p>
+                    <p class="designation">CEO, Fab I</p>
+                </div>
+                <a href="#" id="play-icon" class="fas fa-play-circle fa-3x"></a>
             </div>
-            <i id="play" class="fas fa-play-circle fa-3x"></i>
-        </div>
-        <div class="playing_now">
-            <img class="next" src="images-2.png">
-            <img class="now" src="images-2.png">
-            <img class="previous" src="images-2.png">
-        </div>
-        <div class="detail">
-            <h4>Juhee Ahmed</h4>
-            <p class="desg">Assistant, IIT Madras</p>
-            <h4>Fareeha Choudhary</h4>
-            <p class="desg">Clerk, SBI Noida</p>
-            <h4>Nagma Ahmed</h4>
-            <p class="desg">Assistant, ICICI Delhi</p>
-        </div>
-    </div>
+
+
+
+            <ul class="suggestions">
+                <li>
+
+                    <img class="next" src="sources/inlist.png">
+                    <a href="#" class="fas fa-play-circle fa-3x play-suggestions-icon"></a>
+
+                    <span class="video-details">
+                        <h4>Juhee Ahmed</h4>
+                        <p>Assistant, IIT Madras</p>
+                    </span>
+                </li>
+
+
+                <li>
+
+                    <img class="now" src="sources/inlist.png">
+                    <a href="#" class="fas fa-play-circle fa-3x play-suggestions-icon"></a>
+
+                    <span class="video-details">
+                        <h4>Fareeha Choudhary</h4>
+                        <p>Clerk, SBI Noida</p>
+                    </span>
+                </li>
+
+                <li>
+                    <img class="previous" src="sources/inlist.png">
+                    <a href="#" class="fas fa-play-circle fa-3x play-suggestions-icon"></a>
+
+                    <span class="video-details">
+                        <h4>Nagma Ahmed</h4>
+                        <p>Assistant, ICICI Delhi</p>
+                    </span>
+                </li>
+            </ul>
+
+
+    </section>
 
 
 
