carousel in making

--- a/agni/index.html
+++ b/agni/index.html
@@ -132,7 +132,12 @@
                         <p>Assistant, ICICI Delhi</p>
                     </span>
                 </li>
+
+                <a href="#"><img class="up-arrow" src="sources/downarrow.png"></a>
+                <a href="#"><img class="dwn-arrow" src="sources/downarrow.png"></a>
+
             </ul>
+
 
 
     </section>
