--- a/agni/index.html
+++ b/agni/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body onload="slideshow();">
 
 
     <header>
@@ -53,6 +53,7 @@
     </header>
 
     <section class="banner">
+        <div class="aol"></div>
 
         <div class="wrapper">
 
