--- a/agni/index.html
+++ b/agni/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body onload="slideshow();">
+<body>
 
 
     <header>
@@ -53,7 +53,6 @@
     </header>
 
     <section class="banner">
-        <div class="aol"></div>
 
         <div class="wrapper">
 
