added section strengths

--- a/toTheNew/index.html
+++ b/toTheNew/index.html
@@ -156,6 +156,75 @@
 
         </p>
 
+        <ul class="strengths">
+            <li>
+                <img class="tech-img" src="sources/cropped_pc.jpg">
+                <div class="img-desc">
+                    <h3>Technology</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime enim qui fugiat laudantium
+                        eveniet, quasi alias quos quis sit blanditiis,
+                    </p>
+                    <a href="#" class="know-more-btn">Know More</a>
+                </div>
+
+
+            </li>
+
+            <li>
+
+                <img class="tech-img" src="sources/cropped_stats.jpg">
+                <div class="img-desc">
+                    <h3>
+                        Analytics
+                    </h3>
+                    <p>
+
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime enim qui fugiat laudantium
+                        eveniet, quasi alias quos quis sit blanditiis,
+                    </p>
+                    <a href="#" class="know-more-btn">Know More</a>
+                </div>
+
+
+            </li>
+            <li>
+                <img class="tech-img" src="sources/cropped_mob.jpg">
+                <div class="img-desc">
+                    <h3>
+                        Marketing
+                    </h3>
+                    <p>
+
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime enim qui fugiat laudantium
+                        eveniet, quasi alias quos quis sit blanditiis,
+                    </p>
+                    <a href="#" class="know-more-btn">Know More</a>
+                </div>
+            </li>
+
+            <li>
+                <img class="tech-img" src="sources/cropped_tasks.jpg">
+                <div class="img-desc">
+                    <h3>
+                        Content
+                    </h3>
+                    <p>
+
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime enim qui fugiat laudantium
+                        eveniet, quasi alias quos quis sit blanditiis,
+                    </p>
+                    <a href="#" class="know-more-btn">Know More</a>
+                </div>
+
+            </li>
+
+
+
+
+
+        </ul>
+
 
     </section>
 
