--- a/toTheNew/index.html
+++ b/toTheNew/index.html
@@ -158,7 +158,7 @@
 
         <ul class="strengths">
             <li>
-                <img class="tech-img" src="sources/cropped_pc.jpg">
+                <img src="sources/cropped_pc.jpg">
                 <div class="img-desc">
                     <h3>Technology</h3>
                     <p>
@@ -173,7 +173,7 @@
 
             <li>
 
-                <img class="tech-img" src="sources/cropped_stats.jpg">
+                <img src="sources/cropped_stats.jpg">
                 <div class="img-desc">
                     <h3>
                         Analytics
@@ -189,10 +189,10 @@
 
             </li>
             <li>
-                <img class="tech-img" src="sources/cropped_mob.jpg">
+                <img src="sources/cropped_mob.jpg">
                 <div class="img-desc">
                     <h3>
-                        Marketing
+                        Digital Marketing
                     </h3>
                     <p>
 
@@ -204,7 +204,7 @@
             </li>
 
             <li>
-                <img class="tech-img" src="sources/cropped_tasks.jpg">
+                <img src="sources/cropped_tasks.jpg">
                 <div class="img-desc">
                     <h3>
                         Content
@@ -219,14 +219,114 @@
 
             </li>
 
-
-
-
-
         </ul>
 
 
     </section>
+
+
+    <section class="uniqueness clearfix">
+        <h2 class="heading">Uniqueness Delivered</h2>
+        <hr class="after-heading-hr">
+
+        <div class="card-left"></div>
+
+        <div class="card-right">
+            <div class="card-right-top">
+                <div class="card-desc">
+                    <h3>
+                        Contact
+                    </h3>
+                    <p>
+
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    </p>
+                    <a href="#" class="view-case-study-btn">View Case Study</a>
+                </div>
+
+
+            </div>
+
+            <div class="card-right-bottom">
+
+                <div class="card-desc">
+                    <h3>
+                        Contact
+                    </h3>
+                    <p>
+
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    </p>
+                    <a href="#" class="view-case-study-btn">View Case Study</a>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
+
+    <section class="clients">
+
+        <h2 class="heading">Names who trust us</h2>
+        <hr class="after-heading-hr">
+
+        <table class="brand-table">
+            <tr>
+                <td><span class="airbus"></span></td>
+                <td><span class="sonyliv"></span></td>
+                <td><span class="time-warner"></span></td>
+                <td><span class="thought-buzz"></span></td>
+                <td><span class="swan"></span></td>
+            </tr>
+            <tr>
+                <td><span class="matse"></span></td>
+                <td><span class="connect"></span></td>
+                <td><span class="micar"></span></td>
+                <td><span class="airbus"></span></td>
+                <td><span class="sonyliv"></span></td>
+            </tr>
+            <tr>
+                <td><span class="swan"></span></td>
+                <td><span class="time-warner"></span></td>
+                <td><span class="thought-buzz"></span></td>
+                <td><span class="sonyliv"></span></td>
+                <td><span class="connect"></span></td>
+            </tr>
+            <tr>
+                <td><span class="thought-buzz"></span></td>
+                <td><span class="connect"></span></td>
+                <td><span class="airbus"></span></td>
+                <td><span class="sonyliv"></span></td>
+                <td><span class="time-warner"></span></td>
+            </tr>
+        </table>
+
+
+
+    </section>
+
+    <section class="grails-summit">
+
+        <div class="grails-summit-content-text">
+
+            <h1>Grails Summit 2015</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed velit odit non omnis eveniet delectus
+                blanditiis eum dignissimos tempora, minima aliquid rem ut iste est nobis? Numquam laboriosam officia
+                error!</p>
+
+            <a href="#" class="rsvp-btn">Click here to RSVP</a>
+
+
+        </div>
+
+    </section>
+
+
+
+
 
 
     <footer>
