markup in making

--- a/responsive-projection/index.html
+++ b/responsive-projection/index.html
@@ -13,6 +13,79 @@
 
 <body>
 
+    <header class="wrapper">
+        <h3>Projection by Templated</h3>
+        <ul class="nav">
+            <li>Home</li>
+            <li>Generic</li>
+            <li>Elements</li>
+        </ul>
+        <hr>
+        <h1>Welcome to Projection</h1>
+        <ul class="features">
+            <li>
+                <span class="fas fa-car"></span>
+                <h3>Aliquam</h3>
+                <p>Suspendisse amt ullamco</p>
+
+            </li>
+            <li>
+                <span class="fas fa-camera-retro"></span>
+                <h3>Aliquam</h3>
+                <p>Suspendisse amt ullamco</p>
+
+
+
+            </li>
+            <li>
+                <span class="fas fa-bug"></span>
+                <h3>Aliquam</h3>
+                <p>Suspendisse amt ullamco</p>
+
+
+            </li>
+        </ul>
+        <a class="get-started-btn">Get Started</a>
+    </header>
+
+    <section class="learn-more">
+        <ul class="learn-more-list">
+
+            <li>
+                <span class="image-circle">
+                    <img src="images/pic01.jpg">
+
+                </span>
+                <h1>
+                    Lorem ipsum dolor sit amet
+                </h1>
+                <p> consectetur adipisicing elit.
+                    Ab culpa temporibus soluta eum quis sint placeat
+                    delectus. In earum
+                    sapiente, sunt dolorem natus ratione doloremque
+                    dolores quod dolore unde deleniti?
+                </p>
+                <a class="learn-more-btn">Learn More</a>
+            </li>
+
+        </ul>
+
+
+
+    </section>
+
+    <footer>
+        <h2>Get in touch</h2>
+        <form action="#">
+            <label for="name">Name</label>
+            <input type="text" class="fields" id="name" required>
+        </form>
+
+
+    </footer>
+
+
+
 </body>
 
 </html>
