--- a/responsive-projection/index.html
+++ b/responsive-projection/index.html
@@ -25,6 +25,15 @@
                         <li><a href="#">Generic</a></li>
                         <li><a href="#">Elements</a></li>
                     </ul>
+                    <div class="dropdown">
+                        <button class="dropbtn">
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">Home</a>
+                            <a href="#">Generic</a>
+                            <a href="#">Elements</a>
+                        </div>
+                    </div>
                 </div>
 
                 <hr>
