added corrected freeze

--- a/agni/index.html
+++ b/agni/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body onload="selectEnglish()">
 
 
     <header>
@@ -105,10 +105,10 @@
                     <img class="next" src="sources/inlist.png">
                     <a href="#" class="fas fa-play-circle fa-3x play-suggestions-icon"></a>
 
-                    <span class="video-details">
+                    <div class="video-details">
                         <h4>Juhee Ahmed</h4>
                         <p>Assistant, IIT Madras</p>
-                    </span>
+                    </div>
                 </li>
 
 
@@ -117,20 +117,20 @@
                     <img class="now" src="sources/inlist.png">
                     <a href="#" class="fas fa-play-circle fa-3x play-suggestions-icon"></a>
 
-                    <span class="video-details">
+                    <div class="video-details">
                         <h4>Fareeha Choudhary</h4>
                         <p>Clerk, SBI Noida</p>
-                    </span>
+                    </div>
                 </li>
 
                 <li>
                     <img class="previous" src="sources/inlist.png">
                     <a href="#" class="fas fa-play-circle fa-3x play-suggestions-icon"></a>
 
-                    <span class="video-details">
+                    <div class="video-details">
                         <h4>Nagma Ahmed</h4>
                         <p>Assistant, ICICI Delhi</p>
-                    </span>
+                    </div>
                 </li>
 
                 <a href="#"><img class="up-arrow" src="sources/downarrow.png"></a>
