--- a/digiClock/index.html
+++ b/digiClock/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 
 <head>
     <meta charset="utf-8">
@@ -7,14 +6,19 @@
     <title>Digi Clock</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
 </head>
 
+
 <body>
-    <div class="digi-clock">
+
+    <h1 id="wish"></h1>
+    <hr>
+    <h2 id="digi-clock"> </h2>
+    <h3 id="date"></h3>
 
 
-    </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
